--- a/Journal/Daily/2024-06-26.md
+++ b/Journal/Daily/2024-06-26.md
@@ -26,26 +26,26 @@ Yesterday, I rated my day a six and had friet, topstick, and mexicano for dinner
 
 ## The questions
 
-1. You mentioned feeling excited about Defqon.1. Could you elaborate on what Defqon.1 is and why it's significant to you
+> You mentioned feeling excited about Defqon.1. Could you elaborate on what Defqon.1 is and why it's significant to you
 
-I've listened to hardstyle music since high school. And Defcon is the place where this is celebrated most. I went in 2016 and 2017 but did not find the time afterward.
+I've listened to hardstyle music since high school. And Defqon is the place where this is celebrated most. I went in 2016 and 2017 but did not find the time afterward.
 This is the first year I could motivate myself to go again.
 
-2. what is the context around catching up with Arjan—how did that interaction go, and how long has it been since you last saw them?
+> what is the context around catching up with Arjan—how did that interaction go, and how long has it been since you last saw them?
 The last time I saw Arjan was during Marwijns service. Unfortunately, we didn't have the chance to catch up on the project we both worked on. So, hearing some news from him was a pleasant surprise and I'm looking forward to reconnecting more.
 
 So I am glad to hear some news on that front.
 
-3. It sounds like you had a busy day helping to clear out your grandma's house. Can you provide more details about this task? What exactly did you do, who else was involved, and how far along are you in the process of preparing the house for sale?
+> It sounds like you had a busy day helping to clear out your grandma's house. Can you provide more details about this task? What exactly did you do, who else was involved, and how far along are you in the process of preparing the house for sale?
 My brother, mother, and aunt joined me in the task of clearing out my grandma's house. We managed to empty the attic, but the items were only moved to the second floor. Our next step is to rent a trailer next week to dispose of the items we don't need.
 When the house is cleared, we will begin selling it.
 
-4. You mentioned the need to be proactive in securing a new project to avoid self-criticism. What kinds of projects are you looking for?
+> You mentioned the need to be proactive in securing a new project to avoid self-criticism. What kinds of projects are you looking for?
 I'm open to any project as long as it's in a developer role. I liked doing software because you don't need to move as much. But I also love hardware because of the physicality of it. So eighter is fine.
 
 ---
 
-1. Reflecting on how you felt throughout the day, were there any moments where your emotions surprised you? How did your emotional state compare to the previous day's mostly neutral feeling with moments of excitement and gladness? 
+1. Reflecting on how you felt throughout the day, were there any moments where your emotions surprised you? How did your emotional state compare to the previous day's mostly neutral feeling with moments of excitement and gladness?
 
 I was mostly neutral today.
 
