--- a/Journal/Daily/2024-07-21.md
+++ b/Journal/Daily/2024-07-21.md
@@ -1,41 +1,41 @@
 ---
 tags:
-  - Journal
+ - Journal
 created: 2024-07-21
 auteur:
-  - ChatGPT 4-o
-  - Me
+ - ChatGPT 4-o
+ - Me
 ---
 # Journal entry for Sunday, 2024-07-21
 
 ## Summary of yesterday's entry
 
-During camp, there were several notable events. On July 13, our ship faced a critical situation when the engine stopped working while sailing on the Oosterschelde with many children on board. My fellow scouts and I used a motorboat to help restart the engine, while emergency services towed the main ship to safety. This event left me shaken. On July 18, we learned we'd depart camp a day early due to impending bad weather, which triggered sadness and panic in me. I felt a mix of emotions, from missing out on camp activities and the community to feeling unprepared for the sudden change. Expressing these feelings and engaging in activities helped me cope. By July 21, I noticed how quickly I reverted to pre-camp habits and recognized the need to make positive changes.
+During camp, there were several notable events. On July 13, our ship faced a critical situation when the engine stopped working while sailing on the Oosterschelde with many children on board. My fellow scouts and I used a motorboat to help restart the engine while emergency services towed the main ship to safety. This event left me shaken. On July 18, we learned we'd depart camp a day early due to impending bad weather, which triggered sadness and panic in me. I felt a mix of emotions, from missing out on camp activities and the community to feeling unprepared for the sudden change. Expressing these feelings and engaging in activities helped me cope. By July 21, I noticed how quickly I reverted to pre-camp habits and recognized the need to make positive changes.
 
 ## Questions about yesterday
 
-> Reflecting on the incident on the Oosterschelde, you mentioned feeling a sense of abandoning the main ship despite it not being that serious. Can you elaborate more on your emotions during that moment and how you believe it might have impacted you since then?
+> Reflecting on the incident on the Oosterschelde, you mentioned feeling a sense of abandoning the main ship despite it not being that serious. Can you elaborate more on your emotions and how you believe they might have impacted you since then?
 
-I always say to the clildren that people are more important than things. but in that moment I chose things over people.
+I always say to the children that people are more important than things. But at that moment, I chose things over people.
 
-I also feld like i chose my own safety over the safety of the children.
+I also feel like I chose my safety over the safety of the children.
 
-I think that I started towing the main ship I would be able to get it into the harbor or at least into the wind so that it would deal with the waves better.
+If I started towing the main ship, I would be able to get it into the harbor or into the wind so that it would deal with the waves better.
 
-> You've outlined several possible reasons for feeling sad or panicky about leaving camp early. Can you go deeper into which of those reasons resonate most with you and why? Additionally, how has the quick end to camp affected your overall experience and memories of the camp?
+> You've outlined several possible reasons for feeling sad or panicky about leaving camp early. Can you investigate which of those reasons resonates most with you and why? Additionally, how has the quick end to camp affected your overall experience and memories of the camp?
 
-when I looked back at the photos of the day I was sad to not be there.
-so I think that was the main reason tougether with the unknown and some trauma
+When I looked back at the photos of the day, I was sad that I would not be there.
+So I think that was the main reason, together with the unknown and some trauma.
 
-I think I did not lessen the enjoyabilty of the camp.
+I think I did not lessen the enjoyment of the camp.
 
->You noted that you've quickly fallen back into bad habits after returning from camp. Could you describe what some of these habits are and why you consider them 'bad'? Moreover, what specific changes or strategies do you think might help you maintain positive behaviors you experienced at camp?
+>You noted that you've quickly fallen back into bad habits after returning from camp. Could you describe some of these habits and why you consider them 'bad'? Moreover, what specific changes or strategies might help you maintain the positive behaviors you experienced at camp?
 
 watching a lot of instant videos
 not taking time for the little things
 same food and drink as before camp
 
-I should think about this more tomorrow
+I should think about this more tomorrow.
 
 ## What happened today?
 
@@ -53,20 +53,20 @@ I should think about this more tomorrow
 
 1. Reflecting on Today's Emotions: Yesterday, you felt shaken, sad, and panicked due to challenging events at camp. How did you feel today? Were there any specific moments that triggered strong emotions, and how did you handle them?
 
-Today im calm because Im in a fermiliar enviroment doing things I know
+Today, I'm calm because I am in a familiar environment, doing things I know.
 
-3. Pride and Accomplishment: Considering your goal of being proud of yourself and reflecting on how you helped restart the engine and ensured children’s safety yesterday, what actions or achievements today made you feel proud? How did you recognize and celebrate these accomplishments?
+3. Pride and Accomplishment: Considering your goal of being proud of yourself and reflecting on how you helped restart the engine and ensured children's safety yesterday, what actions or achievements made you feel proud today? How did you recognize and celebrate these accomplishments?
 
-I always tought of my self as a person that stays calm in stressfull situations.
-and that day I was proven right.
+I always thought of myself as staying calm in stressful situations.
+And that day, I was proven right.
 
-I saw it comming was prepaired, prepaired the people around me and when it happed I acted.
+I saw it coming and was prepared for the people around me, and I acted when it happened.
 
-the captain of the ship was in light pannic because he could not leave his station to fix the motor. so he could do nothing and when I proposed decouping the towed ships he aggreed.
+The ship's captain was in light panic because he could not leave his station to fix the motor. So he could do nothing, and he agreed when I proposed decoupling the towed ships.
 
 6. Positive Changes and Awareness: Thinking about how you observed reverting to pre-camp habits, what steps did you take today to implement positive changes in your routine? How did being more aware of your feelings help guide these changes?
 
-I did not make any changes to my habbits this is someting I want to work on
+I did not make any changes to my habits. This is something I want to work on
 
 8. Reflecting on today's activities, how did I feel throughout the day? Did I notice any moments where my emotions significantly shifted? How did I handle those transitions?
 no big emotions today
@@ -99,4 +99,4 @@ I need to put the appointments in the calendar
 
 ## note for chatgpt
 
-write questions about exploring my (bad) habbits and what I want to change about them
+Write questions about exploring my (bad) habits and what I want to change about them.
