--- a/Journal/Daily/2024-07-22.md
+++ b/Journal/Daily/2024-07-22.md
@@ -1,55 +1,60 @@
 ---
 tags:
-  - Journal
+ - Journal
 created: 2024-07-22
 auteur:
-  - ChatGPT 4-o
-  - Me
+ - ChatGPT 4-o
+ - Me
 ---
 # Journal entry for Monday, 2024-07-22
 
 ## Summary of yesterday's entry
 
-Yesterday, you spent the day in a productive and familiar environment, engaging in a mix of leisure and work activities. You started the morning on time but spent some time watching Instagram reels. The afternoon was productive, with work on a crawler and enjoying the F1 race, while the evening included contributing to OpenStreetMap and watching CNN about Biden stepping down. You reflected on your calm demeanor despite stress and took pride in keeping everyone safe in a prior incident. No significant emotional shifts were noted today, but you did feel proud of building a complex web scraper. You didn't make any changes to your habits but recognized a need to work on this in the future. There were no moments of being egotistical as your day didn't demand it. Tomorrow's plans include returning to work, playing DnD in a new setting, and organizing appointments for psychological tests. You learned several new things, including Biden not running for re-election and the complexities of building good software.
+Yesterday, you spent the day in a productive and familiar environment, engaging in leisure and work activities. You started the morning on time but spent some time watching Instagram reels. The afternoon was productive, with work on a crawler and enjoying the F1 race, while the evening included contributing to OpenStreetMap and watching CNN about Biden stepping down. You reflected on your calm demeanor despite the stress and took pride in keeping everyone safe in a prior incident. No significant emotional shifts were noted today, but you did feel proud of building a complex web scraper. You didn't change your habits but recognized a need to work on this in the future. There were no moments of being egotistical as your day didn't demand it. Tomorrow's plans include
+returning to work,
+playing DnD in a new setting, and
+organizing appointments for psychological tests.
+You learned several new things, including Biden not running for re-election and the complexities of building good software.
 
 ## Questions about yesterday
 
-> You mentioned that reverting to pre-camp habits was something you observed but did not address any changes to improve them. What specific pre-camp habits do you consider bad or unproductive, and what concrete steps can you take tomorrow to start changing them?
+> You mentioned that reverting to pre-camp habits was something you observed but did not address any changes to improve them. What pre-camp habits do you consider bad or unproductive, and what concrete steps can you take tomorrow to start changing them?
 
-I think that i was mainly talking about waching short form video and pushing myself too hard
+I think that I was mainly talking about watching short-form videos and pushing myself too hard.
 
 > You had a calm day because you were in a familiar environment doing things you know. How do you plan to maintain that sense of calm and familiarity once you return to work after a week at summer camp? Are there any strategies or routines you can implement to ease this transition?
 
-no I don't think so because because work is chaotic at the moment.
+No, I don't think so because because work is chaotic at the moment.
 
 > You mentioned a few key learnings today, including that building good software is hard and the news about Biden. How do you plan to apply this learning about building good software to your future projects, and are there any specific aspects of today's activities that highlighted this challenge for you?
 
-I found a lot of little mistakes in my crawler that show me that programming in the unknown is difficult
+I found a lot of little mistakes in my crawler that showed me that programming in the unknown is difficult.
 
 ## What happened today?
 
-**What did you have for dinner**: chinese
+**What did you have for dinner**: Chinese
 **Grade for the day**: 6
-**Were you on time for work?**: yes bearly (0930)
+**Were you on time for work?**: Yes bearly (0930)
 
 ## What did you do today?
 
-**Morning**: filled out a lot of questionairs for the psycologist
-**Afternoon**: finished of the first task of the new project
-**After work**: drove to gouda to play dnd
+**Morning**: filled out a lot of questionairs for the psychologist
+**Afternoon**: finished the first task of the new project
+**After work**: drove to Gouda to play DND
 **Evening**: played dnd
 
 ## Reflections
 
 1. Reflecting on your activities from today, can you identify specific moments when you felt a strong emotion? How did you acknowledge and express that feeling? 
-I did not feel any strong emotions today
+I did not feel any strong emotions today.
 
-2. What achievements or positive actions did you take pride in today? Were there any new skills or knowledge you gained that you are proud of?
-I noticed that a lot of decisions I made for the website were the correct ones
+2. What achievements or positive actions did you take pride in today? Were you proud of any new skills or knowledge you gained?
 
-3. Think back to any interactions or decisions today where you prioritized your own needs or desires. Were there opportunities where you chose to be more unapologetically assertive in advocating for yourself?
+I noticed that many decisions I made for the website were correct.
 
-no opertunity arose
+3. Remember any interactions or decisions today where you prioritized your needs or desires. Were there opportunities where you chose to be more unapologetically assertive in advocating for yourself?
+
+No opportunity arose
 
 
 ## What did you learn today?
