--- a/Journal/Daily/2024-07-29.md
+++ b/Journal/Daily/2024-07-29.md
@@ -1,57 +1,74 @@
 ---
 tags:
-  - Journal
+ - Journal
 created: 2024-07-29
 auteur:
-  - ChatGPT 4-o
-  - Me
+ - ChatGPT 4-o
+ - Me
 ---
 # Journal entry for Monday, 2024-07-29
 
 ## Summary of yesterday's entry
 
-I had pasta for dinner and would grade the day as a 7 out of 10. I was on time for work and did shower. In the morning, I attended a meeting, and in the afternoon, I worked on a project. After work, I went for a jog and spent the evening reading. Reflecting on my day, I noticed I felt more relaxed after my jog compared to yesterday. Making the decision to focus more on my work accomplishments made me feel proud, similar to the sense of pride I felt after my jog the previous day. I balanced my personal needs and helping others well, prioritizing myself a bit more than usual. The most worthwhile activity was my project work, which gave me a similar sense of accomplishment as yesterday's jog. For tomorrow, I could increase my focus on personal well-being, perhaps by setting aside extra time for relaxation.
+Last week, from July 22nd through July 29th, was a blend of returning from camp, work challenges, social activities, self-care, and personal obligations. You kicked off the week feeling fatigued from camp and tackled some psychological evaluations, which affirmed your autism diagnosis. While certain days slipped under the radar (like July 23rd), you found joy in successfully introducing a new game mode to your friends on the 24th. The first meeting with your psychologist on the 25th was draining. However, it felt like a positive step forward, despite some stressful moments retrieving your laptop and emotionally taxing tasks like cleaning your late grandmother's house. Work remained demanding, highlighted by a detailed project presentation on the 26th. Over the weekend, you balanced obligations (helping build a clubhouse) with attempts at rest, and your Sunday saw a mix of productive work and much-needed rest. You wrapped up the week by aiming to create stability in your work routine and planning for a quiet, potentially relaxing evening.
 
 ## Questions about yesterday
 
-1. Can you elaborate on the specific activities or interactions you had during the morning, afternoon, after work, and evening that influenced your overall feelings and awareness? How might these have contributed to any emotional shifts you experienced?
+> Reflecting on your psychologist's appointment on July 25th, you mentioned feeling that you didn't have a bond yet due to the compliments you received. Can you elaborate on what specific qualities or interactions you believe will help create a stronger connection with your psychologist over time?
 
-2. You reflected on the sense of pride from today's actions and decisions. Can you describe a specific instance where you felt particularly proud and explain why? How did these actions compare to a specific proud moment from yesterday?
+I mainly took issue with the compliments about how I'm autistic and, thus, I'm good with computers. That undermines all the time and effort I put into learning the required skills.
+I mainly need to talk to him about that.
 
-3. Regarding your goal to be more egotistical in a positive way, can you provide detailed examples of how you balanced personal needs with helping others today? Were there any challenges or successes related to prioritizing yourself more, and how did this differ from your experience yesterday?
+> The project presented to you on July 26th seems quite complex and detailed. Given its scope, how do you plan to approach and manage this project moving forward? Could you benefit from additional strategies or resources to help mitigate feeling overwhelmed?
+
+I think it's best to jump in and start working on it. I believe that I can handle it.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
+**What did you have for dinner**: McDonald's (I was there to do some admin work)
+**Grade for the day**: 7
+**Were you on time for work?**: Yes (0918)
+**Did you shower?**: Yes, because I did not shower yesterday or Saturday
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: got a `sproetje` (a high-priority task) in the form of a user that could not log in
+**Afternoon**: Found the root cause of the problem and escalated it to the right team
+**After work**: went to McDonalds to do some admin work
+**Evening**: worked on having an LLM rewrite vCards (contact information) to markdown
 
 ## Reflections
 
-1. **How Did I Feel Today?**
-   Reflecting on the emotions I experienced today, were there specific moments where I felt particularly strong emotions? How did these feelings compare to yesterday? Did I feel more self-aware of my emotions throughout the day?
+1. **Reflecting on Feelings:**
+   - How did I feel throughout the day today? Were there any moments when I felt particularly strong emotions?
 
-2. **What Made Me Proud?**
-   What actions or achievements from today made me feel proud of myself? Were there any similarities to the pride I felt in my work accomplishments or my personal activities, like jogging, from yesterday?
+It went up and down. I felt a bit of imposter syndrome because I had no idea where to start to solve the problem.
+But that quickly went away. I noticed that my previously gained skills like SQL, c#, and azure stuff translated to this project.
 
-3. **Did I Balance Self-Care and Helping Others?**
-   How well did I prioritize myself today while balancing the needs of others? Did I set aside any extra time for relaxation or personal well-being as I planned? Cite any specific moments or decisions where I felt I put my own needs first.
+2. **Pride in Achievements:**
+   - What is one thing I did today that made me proud? How did this make me feel about my progress towards my goals?
 
-4. **What Worthwhile Activity Did I Do?**
-   Identify what I considered the most worthwhile activity of the day. Did this activity provide a sense of accomplishment or fulfillment similar to the project work or jogging session from yesterday? How did it contribute to my overall sense of purpose?
+I managed to solve the problem with little help, which is more impressive because it was my first day in the code base.
 
-5. **Planning for Tomorrow: How Can I Improve?**
-   Based on today's reflections and emotional awareness, what specific actions can I take tomorrow to better reach my goals? How can I ensure that I continue to be proud of my achievements, maintain a healthy balance between self-care and assisting others, and engage in worthwhile activities?
+3. **Balancing Self and Others:**
+   - In what ways did I prioritize my needs today? Did I find a good balance between helping others and focusing on myself?
+
+I worked hard for the client today, so tomorrow, I will rest.
+
+4. **Worthwhile Activities:**
+   - What meaningful activity did I accomplish today? How did this contribute to my sense of purpose or well-being?
+
+I was of service to the end-user of our software.
+
+
+I also worked on re-digitizing my contacts, which will help me deepen my connections with my friends.
 
 ## What did you learn today?
 
-- 
+- about Azure AD, active directory, and LDAP in general
+- parsing formats with LLMs is difficult because they don't follow a pattern
 
 ## Plans for Tomorrow
+
+- work from home
+- work on contact.json, a standard for writing JSON contacts
