--- a/Journal/Daily/2024-07-30.md
+++ b/Journal/Daily/2024-07-30.md
@@ -10,47 +10,80 @@ auteur:
 
 ## Summary of yesterday's entry
 
-Yesterday, I had dinner (details not provided), rated the day (grade not mentioned), and reached work punctually. In the morning, I engaged in specific activities (details needed), followed by different tasks in the afternoon, then pursued after-work activities, and spent my evening on certain engagements (details for each period were not given). Reflecting on my emotions, I identified significant moments of strong feelings, compared them to the previous day, and noted a heightened emotional awareness. I felt proud of my actions and achievements, paralleling the pride from earlier accomplishments. I balanced self-care and helping others by possibly setting extra time for relaxation. The most worthwhile activity provided a sense of accomplishment and contributed to a sense of purpose. Planning for tomorrow, I intend to focus on actions that enhance goal achievement, ensure pride in my achievements, maintain a balance between self-care and helping others, and engage in fulfilling activities. Further lessons learned and specific plans for the next day were also considered.
-
-
+Yesterday, I had McDonald's for dinner and completed some admin work there. I rated the day a seven and was on time for work, starting the day by tackling a high-priority login issue for a user. I discovered the root cause in the afternoon and escalated it appropriately. In the evening, I worked on converting vCards to markdown using an LLM. Emotional highs and lows were present, with initial feelings of imposter syndrome easing as I applied my SQL, C#, and Azure skills to solve problems. I felt proud of solving the issue independently, especially since it was my first day in the code base. Balancing work, I decided to rest the following day after working hard. Meaningful achievements included assisting the end user and re-digitizing my contacts to nurture personal connections. Today's learnings involved Azure AD, Active Directory, and LDAP, as well as recognizing the challenges with LLM parsing formats. Tomorrow, I plan to work from home and develop a standard for writing JSON contacts.
 
 ## Questions about yesterday
 
-1. In your reflections, you mentioned comparing your emotions to yesterday's. Can you describe in more detail what specific emotions stood out both today and yesterday, and did anything trigger these feelings?
+1. You mentioned feeling imposter syndrome initially but quickly overcoming it due to your existing skills. Can you describe how your SQL, C#, and Azure skills helped you navigate and solve high-priority tasks?
 
-2. You mentioned feeling proud of your achievements today. Could you elaborate on a specific action or event that made you particularly proud and how it compares to what made you feel proud yesterday?
+I noticed many investigative steps I could already do without someone holding my hand.
 
-3. You discussed balancing self-care and helping others. Can you provide an example of a moment from today when you had to choose between your own needs and helping someone else, and how you handled that situation?
+2. You noted that you went to McDonald's after work for admin work. What kind of admin tasks did you work on, and why did you choose McDonald's as the location for these tasks?
+
+Going to McDonald's tricks my brain into thinking that the day is not over. When I get home, I can relax and don't have to do anything.
+
+Also, using my energy in a project instead of driving provides more to my project.
+
+
+3. You said you plan to work from home tomorrow and focus on contact.json. Could you elaborate more on what contact.json entails and your specific goals for working on it?
+
+I want to create a JSON standard for saving contacts. This could result in a Markdown representation of the JSON, which is easily editable.
+
+Also, having the contacts in JSON will help it integrate into other programs.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
-**Did you shower?**:
+**What did you have for dinner**: burritos
+**Grade for the day**: 5
+**Were you on time for work?**: working from home, and yes
+**Did you shower?**: No, because I worked from home.
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: I checked my email for feedback on the issue and then did some things for myself
+**Afternoon**: watched the Olympics
+**After work**: more Olympics watching
+**Evening**: I played some games with friends, and at the end of the night, I did some admin work
 
 ## Reflections
 
-1. Reflecting on today, when did I feel the strongest emotions? How do they compare to yesterdays' emotions? How did these moments align with my goal of being more aware of my feelings?
+1. **Reflecting on Emotions**:
+    - How did you feel during different parts of today compared to yesterday? Describe any specific moments of emotional highs and lows. How do these feelings align with your goal of becoming more aware of your feelings?
+It was a lazy recharge day for me.
 
-2. What actions or achievements today made me feel proud? In what ways did these reflect yesterday's feelings of pride?
+2. **Acknowledge Your Achievements**:
+    - What task or accomplishment today made you feel proud of yourself? How does this compare to how you felt about solving the login issue yesterday?
 
-3. How did I balance self-care and helping others today? Did I take opportunities to focus on my own needs, and how did this compare to how I managed it yesterday?
+I did not do anything to be proud of.
+I made progress on one of my many OSM projects
+but no, nothing to be proud of.
 
-4. Did I accomplish something worthwhile today? What was it and how did it contribute to my overall sense of purpose compared to yesterday’s accomplishments?
+3. **Balancing Self-Care and Giving**:
+    - How did you balance being selflessly giving and taking care of your own needs today? Compare it with your actions from yesterday, like deciding to rest after hard work. 
+Today was a self-care day.
 
-5. Considering my goals and today's experiences, what actions will I take tomorrow to continue growing in emotional awareness, self-pride, healthy egoism, and engaging in fulfilling activities?
+4. **Worthwhile Activities**:
+    - Did you do something worthwhile today that aligns with your personal or professional goals? How does today's worthwhile activity compare to yesterday's meaningful achievements, like assisting the end user and re-digitizing contacts?
 
+no
 
+5. **Identifying Bad Habits**:
+    - Were there any moments today where you recognized and addressed a bad habit? Compare this with any realizations you had yesterday, like opting for rest after a productive day. How can you use these realizations to define and eliminate bad habits further?
+I watched a lot of short-form videos. I tried to curb it by putting a time limit on Instagram, but then I switched to YouTube, which I can't block because I use it to cast videos.
+
+I need something stronger than my will to keep me from watching short-form videos.
 ## What did you learn today?
 
-- 
+
+## The dump
+*dump any thoughts here*
+
+I like it when Daniel invites me for dinner. He already had an open invitation for when I was in Delft. But I took that too literally and waited till I was in Delft.
+
+
 
 ## Plans for Tomorrow
+
+- go to the therapist
+- buy a present for Daniel
+- go to work
